vendor/async-trait-0.1.50/tests/ui/unsupported-self.stderr
error: the `Self` constructor can only be used with tuple or unit structs
  --> $DIR/unsupported-self.rs:11:17
   |
11 |         let _ = Self;
   |                 ^^^^
